--- a/src/css/Display.css
+++ b/src/css/Display.css
@@ -1,27 +1,38 @@
 .display{
-    /* background-image: url("../static/AudioTapes.png"); */
     background-size: cover;
     background-position: center;
     width: 270px;
     height: 210px;
     margin-top: 25px;
-    border: 1.5px solid black;
-    padding:3px;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    padding: 3px;
     display: flex;
     flex-direction: column;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .blank-div{
     width: 270px;
     height: 200px;
-    background-color: #E3F2FD;
+    background: linear-gradient(135deg, rgba(59, 130, 246, 0.1), rgba(139, 92, 246, 0.1));
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    color: rgba(0, 0, 0, 0.6);
+    font-weight: 500;
 }
 
 .empty-text{
     margin: 5px;
+    padding: 5px 10px;
     text-align: center;
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 13px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    line-height: 1.4;
 }
